--- a/src/octalforty.Wizardby.Console/Properties/Resources.resx
+++ b/src/octalforty.Wizardby.Console/Properties/Resources.resx
@@ -208,9 +208,21 @@ Abbreviations:
   <data name="WdiTemplate" xml:space="preserve">
     <value>deployment:
     environment development
-        platform            =&gt; sqlserver 
+        platform            =&gt; sqlserver
         host                =&gt; "(local)\sqlexpress"
-        database            =&gt; {0}_dev
+        database            =&gt; {0}
+        integrated-security =&gt; true
+        
+    environment staging
+        platform            =&gt; sqlserver
+        host                =&gt; "(local)\sqlexpress"
+        database            =&gt; {0}_staging
+        integrated-security =&gt; true
+        
+    environment production
+        platform            =&gt; sqlserver
+        host                =&gt; "(local)\sqlexpress"
+        database            =&gt; {0}_production
         integrated-security =&gt; true</value>
   </data>
 </root>
