--- a/src/octalforty.Wizardby.Console/Properties/Resources.resx
+++ b/src/octalforty.Wizardby.Console/Properties/Resources.resx
@@ -117,15 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConnectionStringInformation" xml:space="preserve">
+    <value>Connection string: {0}</value>
+  </data>
   <data name="CopyrightInformation" xml:space="preserve">
-    <value>octalforty Wizardby {0} Alpha 1.
+    <value>octalforty Wizardby {0} Alpha 1
 Copyright (c) 2009 octalforty studios</value>
   </data>
   <data name="CouldNotResolvePlatformAlias" xml:space="preserve">
     <value>Could not resolve Platform Alias '{0}'.</value>
   </data>
+  <data name="CurrentDatabaseVersionInfo" xml:space="preserve">
+    <value>Current database version: {0}</value>
+  </data>
   <data name="DatabaseIsNotVersioned" xml:space="preserve">
     <value>Database is not versioned or no migrations were applied yet.</value>
+  </data>
+  <data name="EnvironmentInformation" xml:space="preserve">
+    <value>Environment: {0}</value>
   </data>
   <data name="MdlTemplate" xml:space="preserve">
     <value>migration "{0}" revision =&gt; 1:
@@ -134,6 +143,15 @@ Copyright (c) 2009 octalforty studios</value>
 
     version {1:yyyyMMddHHmmss}:
         /* Start writing migrations */</value>
+  </data>
+  <data name="MigrationDefinitionInformation" xml:space="preserve">
+    <value>Migration Definition: {0}</value>
+  </data>
+  <data name="RegisteredDatabaseVersionInfo" xml:space="preserve">
+    <value>    {0}</value>
+  </data>
+  <data name="RegisteredDatabaseVersionsInfo" xml:space="preserve">
+    <value>Registered versions:</value>
   </data>
   <data name="UsageInformation" xml:space="preserve">
     <value>Usage: 
