* Fixed all existing migration commands, still need refactoring though * Started working on reverse engineering stuff

--- a/src/octalforty.Wizardby.Console/Properties/Resources.resx
+++ b/src/octalforty.Wizardby.Console/Properties/Resources.resx
@@ -165,6 +165,9 @@ Copyright (c) 2009 octalforty studios</value>
   <data name="RegisteredDatabaseVersionsInfo" xml:space="preserve">
     <value>Registered versions:</value>
   </data>
+  <data name="UnknownCommand" xml:space="preserve">
+    <value>Unknown command '{0}'.</value>
+  </data>
   <data name="UsageInformation" xml:space="preserve">
     <value>Usage: 
     wizardby &lt;command&gt; &lt;version-or-step&gt; [/mdl:&lt;mdl-file&gt;] 
