* wizardby.exe now throws exception on ambiguous command

--- a/src/octalforty.Wizardby.Console/Properties/Resources.resx
+++ b/src/octalforty.Wizardby.Console/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AmbiguousCommand" xml:space="preserve">
+    <value>Ambiguous command '{0}'. Could be '{1}'.</value>
+  </data>
   <data name="ConnectionStringInformation" xml:space="preserve">
     <value>Connection string: {0}</value>
   </data>
